crates/atm-core/tests/snapshots/normalize__resume_failure_adds_one_new_session_notice.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "No conversation found with session ID: 3f1c2b9e"
      }
    }
  },
  {
    "Upsert": {
      "idx": 11,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Notice",
        "level": "Warn",
        "text": "La sessione precedente non è stata trovata dal CLI: avvia una nuova sessione.",
        "action": "NewSession"
      }
    }
  },
  {
    "Upsert": {
      "idx": 12,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1100,
      "parent_tool_use_id": null,
      "body": {
        "type": "TurnEnd",
        "subtype": "error_during_execution",
        "is_error": true,
        "duration_ms": null,
        "num_turns": null,
        "cost_usd_estimate": null,
        "permission_denials": 0,
        "text": "No conversation found with session ID: 3f1c2b9e",
        "limit": null
      }
    }
  },
  {
    "Typing": null
  }
]
