crates/atm-core/tests/snapshots/normalize__stderr_merges_lines_closer_than_2_s.snap
---
source: crates/atm-core/tests/normalize.rs
expression: view(ops)
---
[
  {
    "Upsert": {
      "idx": 10,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "error: something failed"
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 1,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "error: something failed\n    at step one"
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 2,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "error: something failed\n    at step one\n"
      }
    }
  },
  {
    "Upsert": {
      "idx": 10,
      "rev": 3,
      "process_id": "proc-1",
      "ts": 1000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "error: something failed\n    at step one\n\n    at step two"
      }
    }
  },
  {
    "Upsert": {
      "idx": 11,
      "rev": 0,
      "process_id": "proc-1",
      "ts": 6000,
      "parent_tool_use_id": null,
      "body": {
        "type": "Stderr",
        "text": "later, unrelated"
      }
    }
  }
]
